part of chat_privately done, refactor some of the code
